--- a/index.html
+++ b/index.html
@@ -55,6 +55,49 @@
         </div>
     </div>
 
+    <!-- New Simple Mockups Section -->
+<div class="relative bg-white py-16 sm:py-24">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+        <!-- Section Header -->
+        <div class="lg:text-center mb-12">
+            <h2 class="text-base text-indigo-600 font-semibold tracking-wide uppercase">Preview</h2>
+            <p class="mt-2 text-3xl leading-8 font-extrabold tracking-tight text-gray-900 sm:text-4xl">
+                Simple. Intuitive. Trustworthy.
+            </p>
+        </div>
+        
+        <!-- Mockups Container -->
+        <div class="relative mx-auto max-w-6xl">
+            <!-- Desktop Mockup -->
+            <div class="relative rounded-xl shadow-xl overflow-hidden">
+                <img 
+                    src="/assets/hero.jpg" 
+                    alt="TrustCircle desktop interface"
+                    class="w-full h-auto"
+                />
+            </div>
+
+            <!-- Mobile Mockup -->
+            <!-- <div class="absolute -right-6 -bottom-10 md:right-[5%] w-1/3 max-w-[200px]">
+                <div class="shadow-xl transform rotate-6">
+                    <img 
+                        src="/api/placeholder/390/844" 
+                        alt="TrustCircle mobile interface"
+                        class="w-full h-auto rounded-xl"
+                    />
+                </div>
+            </div> -->
+        </div>
+
+        <!-- Caption -->
+        <div class="text-center mt-16 max-w-2xl mx-auto">
+            <p class="text-base text-gray-500">
+                Experience TrustCircle on any device. Get personalized recommendations from your trusted network, anytime, anywhere.
+            </p>
+        </div>
+    </div>
+</div>
+
     <!-- How It Works Section -->
     <div id="how-it-works" class="py-16 bg-gray-50">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
