Added about us section

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
             </div>
         </div>
     </div>
-
+</body>
     <!-- Footer -->
     <footer class="bg-gray-800">
         <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:px-8">
@@ -269,7 +269,7 @@
                 <div>
                     <h3 class="text-white font-medium mb-4">Company</h3>
                     <ul class="space-y-2">
-                        <li><a href="#" class="text-gray-400 hover:text-white">About</a></li>
+                        <li><a href="./aboutus.html" class="text-gray-400 hover:text-white">About</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-white">Careers</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-white">Press</a></li>
                     </ul>
@@ -284,4 +284,21 @@
                 </div>
                 <div>
                     <h3 class="text-white font-medium mb-4">Resources</h3>
-                    <ul class="space
+                    <ul class="space-y-2">
+                        <li><a href="#" class="text-gray-400 hover:text-white">Blog</a></li>
+                        <li><a href="#" class="text-gray-400 hover:text-white">Help Center</a></li>
+                        <li><a href="#" class="text-gray-400 hover:text-white">Contact</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h3 class="text-white font-medium mb-4">Legal</h3>
+                    <ul class="space-y-2">
+                        <li><a href="#" class="text-gray-400 hover:text-white">Privacy</a></li>
+                        <li><a href="#" class="text-gray-400 hover:text-white">Terms</a></li>
+                        <li><a href="#" class="text-gray-400 hover:text-white">Cookie Policy</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+</html>
