fixed nav issue

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                     <a href="#how-it-works" class="text-gray-600 hover:text-gray-900">How It Works</a>
                     <a href="#benefits" class="text-gray-600 hover:text-gray-900">Benefits</a>
                     <a href="#earning" class="text-gray-600 hover:text-gray-900">Earn Money</a>
+                    <a href="./aboutus.html" class="text-gray-600 hover:text-gray-900">About Us</a>
                     <button class="bg-indigo-600 text-white px-4 py-2 rounded-md hover:bg-indigo-700">Join Now</button>
                 </div>
             </div>
