--- a/aboutus.html
+++ b/aboutus.html
@@ -16,8 +16,7 @@
                 </div>
                 <div class="hidden md:flex items-center space-x-8">
                     <a href="index.html" class="text-gray-600 hover:text-gray-900">Home</a>
-                    <a href="#" class="text-gray-600 hover:text-gray-900">How It Works</a>
-                    <a href="#" class="text-gray-600 hover:text-gray-900">Benefits</a>
+                    <a href="./aboutus.html" class="text-gray-600 hover:text-gray-900">About Us</a>
                     <button class="bg-indigo-600 text-white px-4 py-2 rounded-md hover:bg-indigo-700">Join Now</button>
                 </div>
             </div>
