added bios for me and baz

--- a/aboutus.html
+++ b/aboutus.html
@@ -181,9 +181,11 @@
                     <img src="/api/placeholder/150/150" alt="Team member" class="w-32 h-32 rounded-full mx-auto mb-4">
                     <h3 class="text-xl font-medium text-gray-900 text-center">Henry Lin</h3>
                     <p class="text-indigo-600 text-center mb-3">Founder</p>
-                    <p class="text-gray-500 text-center">I have held various roled in strategy and operations for startups, digital media, and Fortune 500 companies. My yearn 
-                        for entrepreneurship started at a young age frrom working in two family business. I've always loved connecting with people and learning more about them,
-                        so start TrustCircle is the perfect intersection of that: business that connects people.
+                    <p class="text-gray-500 text-center">Henry has held have held various roles within strategy and operations for startups, digital media, and Fortune 500 companies. His yearn 
+                        for entrepreneurship started at a young age frrom working in two family business. He understands the time, effort, and commitment required to operate a successful business.
+                        He also is passionate about connecting with people and understanding their journey. He believes each person has a unique perspective and valuable insights that they can give to help others
+                        in their own lives. This is where TrustCircle was born. A unique way to interact with people by helping them find the right product for them.
+    
                     </p>
                 </div>
                 <!-- Team Member 2 -->
@@ -191,7 +193,8 @@
                     <img src="/api/placeholder/150/150" alt="Team member" class="w-32 h-32 rounded-full mx-auto mb-4">
                     <h3 class="text-xl font-medium text-gray-900 text-center">Bazham Khanatayev</h3>
                     <p class="text-indigo-600 text-center mb-3">Co-founder</p>
-                    <p class="text-gray-500 text-center">Tech innovator with 15+ years experience in building scalable platforms and social networks.</p>
+                    <p class="text-gray-500 text-center">A Civil Engineer turned Data Scientist. Bazham has extensive experience in various industries spanning from building transportation infrastructure for the state to managing analyicts for large consumer good company. 
+                        Bazham has also has passion for entrepreneurship, participating in the Excel Ventures program and creating blueprints for returns processing for consumer goods. </p>
                 </div>
             </div>
         </div>
