--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TrustCircle | Authentic Product Reviews from Friends</title>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet"><script async type='text/javascript' src='https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=TCMNWf'></script>
+    <script type="text/javascript">
+        document.querySelector('.klaviyo_form_trigger').addEventListener('click', function (){
+            window._klOnsite = window._klOnsite || []; 
+            window._klOnsite.push(['openForm', 'QTxSaX']);
+        });
+    </script>
 </head>
 <body class="bg-gray-50">
     <!-- Navigation -->
@@ -28,7 +34,7 @@
                     <a href="#benefits" class="text-gray-600 hover:text-gray-900">Benefits</a>
                     <a href="#earning" class="text-gray-600 hover:text-gray-900">Earn Money</a>
                     <a href="./aboutus.html" class="text-gray-600 hover:text-gray-900">About Us</a>
-                    <button class="bg-indigo-600 text-white px-4 py-2 rounded-md hover:bg-indigo-700">Join Now</button>
+                    <button class="klaviyo_form_trigger bg-indigo-600 text-white px-4 py-2 rounded-md hover:bg-indigo-700">Join Now</button>
                 </div>
             </div>
     
@@ -39,7 +45,7 @@
                     <a href="#benefits" class="block px-3 py-2 text-gray-600 hover:text-gray-900 hover:bg-gray-50 rounded-md">Benefits</a>
                     <a href="#earning" class="block px-3 py-2 text-gray-600 hover:text-gray-900 hover:bg-gray-50 rounded-md">Earn Money</a>
                     <a href="./aboutus.html" class="block px-3 py-2 text-gray-600 hover:text-gray-900 hover:bg-gray-50 rounded-md">About Us</a>
-                    <button class="w-full text-left px-3 py-2 text-white bg-indigo-600 hover:bg-indigo-700 rounded-md">Join Now</button>
+                    <button class="klaviyo_form_trigger w-full text-left px-3 py-2 text-white bg-indigo-600 hover:bg-indigo-700 rounded-md">Join Now</button>
                 </div>
             </div>
         </div>
@@ -84,9 +90,9 @@
                         </p>
                         <div class="mt-5 sm:mt-8 sm:flex sm:justify-center">
                             <div class="rounded-md shadow">
-                                <a href="#" class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 md:py-4 md:text-lg md:px-10">
+                                <button class="klaviyo_form_trigger w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 md:py-4 md:text-lg md:px-10">
                                     Create Your Circle
-                                </a>
+                                </button>
                             </div>
                             <div class="mt-3 sm:mt-0 sm:ml-3">
                                 <a href="#how-it-works" class="w-full flex items-center justify-center px-8 py-3 border border-transparent text-base font-medium rounded-md text-indigo-600 bg-indigo-100 hover:bg-indigo-200 md:py-4 md:text-lg md:px-10">
