--- a/aboutus.html
+++ b/aboutus.html
@@ -5,6 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us | TrustCircle</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet"><script async type='text/javascript' src='https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=TCMNWf'></script>
+    <script type="text/javascript">
+        document.addEventListener('DOMContentLoaded', function() {
+            const triggers = document.querySelectorAll('.klaviyo_form_trigger');
+            triggers.forEach(trigger => {
+                trigger.addEventListener('click', function() {
+                    window._klOnsite = window._klOnsite || []; 
+                    window._klOnsite.openForm('QTxSaX');
+                });
+            });
+
+            // Mobile menu functionality
+            const menuButton = document.getElementById('menuButton');
+            const mobileMenu = document.getElementById('mobileMenu');
+            
+            menuButton.addEventListener('click', () => {
+                mobileMenu.classList.toggle('hidden');
+            });
+
+            // Close mobile menu when clicking outside
+            document.addEventListener('click', (e) => {
+                if (!menuButton.contains(e.target) && !mobileMenu.contains(e.target)) {
+                    mobileMenu.classList.add('hidden');
+                }
+            });
+
+            // Close mobile menu when window is resized to desktop view
+            window.addEventListener('resize', () => {
+                if (window.innerWidth >= 768) { // 768px is Tailwind's md breakpoint
+                    mobileMenu.classList.add('hidden');
+                }
+            });
+        });
+    </script>
 </head>
 <body class="bg-gray-50">
     <!-- Navigation (same as landing page) -->
@@ -26,7 +60,7 @@
                 <div class="hidden md:flex items-center space-x-8">
                     <a href="index.html" class="text-gray-600 hover:text-gray-900">Home</a>
                     <a href="./aboutus.html" class="text-gray-600 hover:text-gray-900">About Us</a>
-                    <button class="bg-indigo-600 text-white px-4 py-2 rounded-md hover:bg-indigo-700">Join Now</button>
+                    <button class="klaviyo_form_trigger bg-indigo-600 text-white px-4 py-2 rounded-md hover:bg-indigo-700">Join Now</button>
                 </div>
             </div>
     
