--- a/index.html
+++ b/index.html
@@ -272,9 +272,9 @@
                 </p>
                 <div class="mt-8">
                     <div class="inline-flex rounded-md shadow">
-                        <a href="#" class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-indigo-600 bg-white hover:bg-indigo-50">
+                        <button class="klaviyo_form_trigger inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-indigo-600 bg-white hover:bg-indigo-50">
                             Start Earning Today
-                        </a>
+                        </button>
                     </div>
                 </div>
             </div>
@@ -332,9 +332,9 @@
             </h2>
             <div class="mt-8 flex lg:mt-0 lg:flex-shrink-0">
                 <div class="inline-flex rounded-md shadow">
-                    <a href="#" class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700">
+                    <button class="klaviyo_form_trigger inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700">
                         Get started
-                    </a>
+                    </button>
                 </div>
             </div>
         </div>
